[metadata]
name=VASA
version=0.0.6
author=Alex Rudolph, Evgeny Noi
author_email=arudolph@ucsb.edu, evgeny.noi@geog.ucsb.edu
description=Spatial Structure Visualization
long_description=file:README.md
long_description_content_type=text/markdown
url=https://github.com/move-ucsb/vasa

[options]
packages=find:
python_requires=>=3.8

[options.packages.find]
where=src
